@@ -118,14 +118,14 @@ enum kb_action {
 	LFUN_BUFFER_BEGIN_SELECT,
 	// 55
 	LFUN_BUFFER_END_SELECT,
-	LFUN_SPACE_INSERT,               // JSpitzm 20030520
-	LFUN_SPECIALCHAR_INSERT,         // JSpitzm, 20071205
+	LFUN_SPACE_INSERT,              // JSpitzm 20030520
+	LFUN_SPECIALCHAR_INSERT,        // JSpitzm, 20071206
 	LFUN_MARK_TOGGLE,
 	LFUN_CHAR_DELETE_FORWARD,
 	// 60
 	LFUN_CHAR_DELETE_BACKWARD,
 	LFUN_NEW_LINE,
-	LFUN_LINE_BREAK,
+	LFUN_LINE_BREAK,                // uwestoehr 20071125
 	LFUN_BREAK_PARAGRAPH,
 	LFUN_QUOTE_INSERT,
 	// 65
@@ -335,7 +335,7 @@ enum kb_action {
 	// 235
 	LFUN_BOX_INSERT,
 	LFUN_LINE_INSERT,
-	LFUN_NEWPAGE_INSERT,		// uwestoehr 20071124
+	LFUN_NEWPAGE_INSERT,            // uwestoehr 20071124
 	LFUN_PAGEBREAK_INSERT,
 	LFUN_REPEAT,
 	// 240
