@@ -24,6 +24,11 @@ Some of the LyX functions have changed names:
   * LFUN_MENU_SEPARATOR_INSERT: removed. "menu-separator-insert" 
     has been replaced by "specialchar-insert menu-separator"
 
+- new function LFUN_LINE_BREAK, "line-break"
+- new function LFUN_PAGEBREAK_INSERT, "pagebreak-insert"
+- function LFUN_BREAK_LINE, "break-line" has been renamed to LFUN_NEW_LINE, "new-line"
+- function LFUN_PAGEBREAK_INSERT, "pagebreak-insert" has been renamed to LFUN_NEWPAGE_INSERT, "newpage-insert"
+
 
 Known issues in version 1.5.2
 ------------------------------------
